<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/calc_screen_padding">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/calc_screen_padding"
        android:layout_gravity="center"
        android:id="@+id/imageView"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/app_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/calc_screen_padding"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_txt1"
        android:id="@+id/textView1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/calc_screen_padding"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_txt2"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/calc_screen_padding"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_txt3"
        android:id="@+id/textView3" />
</LinearLayout>